# AutomaticTrading

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTION-TRACKER.md  AGENTS.md  ANTI-PATTERN-REPORT.md  CHANGELOG.md  CLAUDE.md  DATA_ACCURACY_REPORT.md  INSTALL.md  MISSING.md  README.md  REVIEW-WEB.md  REVIEW.md  SECURITY-AUDIT.md  SECURITY.md  TEST-RESULTS.md  UI-BUGS-2.md  UI-BUGS.md  memo-nu-snapshot.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.audit/: playwright_audit.py  playwright_deep_audit.py
.planning/: AUDIT-AGENTS-MATH.md  AUDIT-SECURITY.md  AUDIT-TRADING-PIPELINE.md  AUDIT-UI-UX.md  FINAL-VERIFICATION.md  NEXT_SEGMENT.md  PROJECT.md  RE-AUDIT-AGENTS-MATH.md  RE-AUDIT-SECURITY-TRADING.md  REVIEWS-ALL.md  REVIEWS.md  ROADMAP.md  STATE.md  ZETA_CYCLE_COMPARISON.md  agents_page_audit_jun29.md  memo_allocator_redesign_prompt.md
.planning/codebase/: CONCERNS.md
.planning/phases/: FULL-CODE-REVIEW-2026-05-31.md  FULL-REVIEW-2026-05-17.md  FULL-REVIEW.md  REVIEWS-5.md  SECURITY.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
config/: crucible.toml  model_hashes.toml  model_registry.json  mutation.toml  notification.toml  resources.toml  risk.toml  runtime_state.sample.json  source_criticality.toml
docs/: OPTIMIZATION-AUDIT.md  operator_runbook.md  web-architecture-review.md
launchd/: com.pmacs.cortex-self-check.plist  com.pmacs.cortex.plist  com.pmacs.dashboard.plist  com.pmacs.execution.plist  com.pmacs.inference.plist  com.pmacs.mutation.plist  com.pmacs.nervous.plist  com.pmacs.stoploss.plist
ops/: audit_chain_verify.py  audit_chain_verify.sh  backup_verify.py  compute_model_hash.sh  download_embedding_model.py  install_launchd.sh  install_pf_rules.sh  install_system_users.sh  migrate.py  profile_cycle.py  profile_memory.py  profile_system.py  spec_consistency.py  start_inference.sh  token_usage.py  verify_isolation.py
pmacs/: __init__.py  __main__.py  cli.py  config.py  constants.py  stop_loss_daemon.py
scripts/: onds_research.py  solo_accuracy_audit.py  solo_hallucination_audit.py  token_budget_test.py  token_test_NBIS_growth_hunter.json
spec/: Agents.md  Architecture.md  Phases.md  Source.md
tests/: conftest.py
(+599 files in other folders)
