[project]
name = "pmacs"
version = "0.1.0"
description = "Portfolio Management and Catalyst Automation System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "cryptography>=42.0",
    "keyring>=25.0",
    "tomli>=2.0;python_version<'3.11'",
    "fastapi>=0.110",
    "python-multipart>=0.0.7",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
    "jinja2>=3.1.6",
    "duckdb>=1.5.2",
    "alpaca-py>=0.30",
    "kuzu>=0.5.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "pytz>=2024.1",
    "qrcode>=8.2",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.6",
    "ruff>=0.3",
    "hypothesis>=6.0",
]

[project.scripts]
pmacs = "pmacs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks integration tests (require network or services)",
    "e2e: marks end-to-end tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
